--- a/Resources/views/AuditFormField/index.html.twig
+++ b/Resources/views/AuditFormField/index.html.twig
@@ -6,7 +6,7 @@
         <legend>
             Existing Fields
             <a class="btn btn-mini pull-right"
-               href="{{ path( 'cisco_auditformfield_add' ) }}">
+               href="{{ path( 'cisco_auditfield_add' ) }}">
                 <i class="icon-plus"></i> Add a new field
             </a>
         </legend>
