--- a/Resources/views/base.html.twig
+++ b/Resources/views/base.html.twig
@@ -54,10 +54,10 @@
                   <a href="{{ path( 'cisco_auditforms' ) }}">view form list</a>
               </li>
               <li>
-                  <a href="{{ path( 'cisco_auditformsections' ) }}">view section list</a>
+                  <a href="{{ path( 'cisco_auditsections' ) }}">view section list</a>
               </li>
               <li>
-                  <a href="{{ path( 'cisco_auditformfields' ) }}">view field list</a>
+                  <a href="{{ path( 'cisco_auditfields' ) }}">view field list</a>
               </li>
             </ul>
           </div><!--/.nav-collapse -->
