--- a/Resources/views/AuditFormSection/view.html.twig
+++ b/Resources/views/AuditFormSection/view.html.twig
@@ -69,12 +69,8 @@
                 </tr>
             {% else %}
                 <tr>
-                    <td>
-                        <div class="alert alert-error">
-                            <button type="button" class="close" data-dismiss="alert">×</button>
-                            <h4>Warning!</h4>
-                            <p>No fields yet.</p>
-                        </div>
+                    <td colspan="5">
+                        No field assigned to this section
                     </td>
                 </tr>
             {% endfor %}
