WIP add remove section from form edit (cont)

--- a/Resources/views/AuditFormSection/_ulist.html.twig
+++ b/Resources/views/AuditFormSection/_ulist.html.twig
@@ -10,4 +10,7 @@
     </a>
     {% endfor %}
 {% endif %}
+    <a class="btn btn-mini test">
+        TEST <i class="icon-warning-sign"></i>
+    </a>
 </div>
