--- a/Resources/views/AuditForm/list.html.twig
+++ b/Resources/views/AuditForm/list.html.twig
@@ -33,8 +33,11 @@
                         </td>
                     </tr>
                 {% else %}
-                    <tr>
-                        <td colspan="4">no forms yet</td>
+                    <tr class="warning-empty">
+                        <td colspan="6">
+                            <i class="icon-warning-sign"></i> 
+                            No form.
+                        </td>
                     </tr>
                 {% endfor %}
             </tbody>
