--- a/Resources/views/AuditFormField/_view.html.twig
+++ b/Resources/views/AuditFormField/_view.html.twig
@@ -33,11 +33,11 @@
         </div>        
     </td>
 </tr>
-<tr class="cisco-audit-desc-row">
+<tr class="cisco-audit-desc-row" style="display: none;">
     <td><i>Description: </i></td>
     <td colspan="5">{{ field.description }}</td>
 </tr>
-<tr class="cisco-audit-desc-row">
+<tr class="cisco-audit-desc-row" style="display: none;">
     <td><i>Scores: </i></td>
     <td colspan="5">
     {% for score, label in field.scores %}
