--- a/Resources/views/AuditFormSection/_load.html.twig
+++ b/Resources/views/AuditFormSection/_load.html.twig
@@ -27,9 +27,11 @@
 {% for field in section.fields %}
     {% include 'CiscoSystemsAuditBundle:AuditFormField:_load.html.twig' %}
 {% else %}
-<tr class="cisco-audit-field-row">
-    <td colspan="6" style="text-align: center; background-color: pink;">No field is assigned to this section.
-    </td>
-</tr>
+    <tr class="warning-empty">
+        <td colspan="6">
+            <i class="icon-warning-sign"></i> 
+            No field assigned to this section.
+        </td>
+    </tr>
 {% endfor %}
 {% endblock %}
