--- a/Resources/views/AuditFormSection/edit.html.twig
+++ b/Resources/views/AuditFormSection/edit.html.twig
@@ -70,9 +70,10 @@
             {% for field in section.fields %}
                 {% include 'CiscoSystemsAuditBundle:AuditFormField:_load.html.twig' %}
             {% else %}
-                <tr>
-                    <td colspan="5" style="text-align: center;">
-                        No field assigned to this section
+                <tr class="warning-empty">
+                    <td colspan="6">
+                        <i class="icon-warning-sign"></i> 
+                        No field assigned to this section.
                     </td>
                 </tr>
             {% endfor %}
