--- a/Resources/views/AuditFormSection/view.html.twig
+++ b/Resources/views/AuditFormSection/view.html.twig
@@ -68,9 +68,10 @@
                     </td>
                 </tr>
             {% else %}
-                <tr>
-                    <td colspan="5">
-                        No field assigned to this section
+                <tr class="warning-empty">
+                    <td colspan="6">
+                        <i class="icon-warning-sign"></i> 
+                        No field assigned to this section.
                     </td>
                 </tr>
             {% endfor %}
