--- a/Resources/views/AuditForm/index.html.twig
+++ b/Resources/views/AuditForm/index.html.twig
@@ -66,13 +66,10 @@
                         </td>
                     </tr>
                 {% else %}
-                    <tr>
-                        <td colspan="4">
-                        <div class="alert alert-error">
-                            <button type="button" class="close" data-dismiss="alert">×</button>
-                            <h4>Warning!</h4>
-                            <p>No forms yet.</p>
-                        </div>
+                    <tr class="warning-empty">
+                        <td colspan="6">
+                            <i class="icon-warning-sign"></i> 
+                            No forms yet.
                         </td>
                     </tr>
                 {% endfor %}
