--- a/Resources/views/AuditFormField/_load.html.twig
+++ b/Resources/views/AuditFormField/_load.html.twig
@@ -25,11 +25,11 @@
         </div>
     </td>
 </tr>
-<tr class="cisco-audit-desc-row">
+<tr class="cisco-audit-desc-row" style="display: none;">
     <td><i>Description: </i></td>
     <td colspan="4">{{ field.description }}</td>
 </tr>
-<tr class="cisco-audit-desc-row">
+<tr class="cisco-audit-desc-row" style="display: none;">
     <td><i>Scores: </i></td>
     <td colspan="4">
     {% for score, label in field.scores %}
